# clang-plugins

./: CMakeLists.txt  LICENSE  README.md  run_tests.sh
.github/workflows/: build-and-test.yml
clang-tidy/: CMakeLists.txt  ListFreeCheck.cpp  ListFreeCheck.h  PostgresTidyModule.cpp  ReturnInPgTryBlockCheck.cpp  ReturnInPgTryBlockCheck.h
lib/: CMakeLists.txt  ListFreeChecker.cpp  MismatchMallocChecker.cpp  ReturnInPgTryBlockChecker.cpp
test/: test_list_free.c  test_return_in_pg_try.c
